fix: update z-index of arrow icon to ensure visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,7 @@ button:focus {
   text-align: center;
   box-shadow: 5px 5px 0px 0px var(--color-accent);
   transition: opacity 300ms ease-in;
+  z-index: 200;
 }
 .fa-arrow-up {
   color: white;
